--- a/pom.xml
+++ b/pom.xml
@@ -39,21 +39,6 @@
       <scope>provided</scope>
     </dependency>
 
-    <dependency>
-      <groupId>org.wildfly</groupId>
-      <artifactId>wildfly-ejb-client-bom</artifactId>
-      <version>25.0.1.Final</version>
-      <type>pom</type>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-server -->
-    <dependency>
-      <groupId>org.glassfish.jersey.core</groupId>
-      <artifactId>jersey-server</artifactId>
-      <version>2.34</version>
-    </dependency>
-
-
     <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-common -->
     <dependency>
       <groupId>org.glassfish.jersey.core</groupId>
@@ -84,6 +69,12 @@
           <artifactId>hibernate-core</artifactId>
           <version>5.6.1.Final</version>
       </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.9</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -119,6 +110,52 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.cargo</groupId>
+          <artifactId>cargo-maven2-plugin</artifactId>
+          <version>1.7.16</version>
+          <configuration>
+            <container>
+              <containerId>glassfish4x</containerId>
+              <type>remote</type>
+            </container>
+            <configuration>
+              <type>runtime</type>
+              <properties>
+                <cargo.remote.username>admin</cargo.remote.username>
+                <cargo.remote.password></cargo.remote.password>
+                <cargo.glassfish.admin.port>4848</cargo.glassfish.admin.port>
+                <cargo.hostname>localhost</cargo.hostname>
+              </properties>
+            </configuration>
+          </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>org.glassfish.main.deployment</groupId>
+              <artifactId>deployment-client</artifactId>
+              <version>5.0</version>
+            </dependency>
+          </dependencies>
+          <executions>
+            <execution>
+              <id>deploy</id>
+              <phase>pre-integration-test</phase>
+              <goals>
+                <goal>start</goal>
+                <goal>redeploy</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>undeploy</id>
+              <phase>post-integration-test</phase>
+              <goals>
+                <goal>undeploy</goal>
+                <goal>stop</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
       </plugins>
     </pluginManagement>
     <plugins>
