--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,14 +4,14 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-  <security-constraint>
-    <web-resource-collection>
-      <web-resource-name>Secured</web-resource-name>
-      <url-pattern>/*</url-pattern>
-    </web-resource-collection>
+<!--  <security-constraint>-->
+<!--    <web-resource-collection>-->
+<!--      <web-resource-name>Secured</web-resource-name>-->
+<!--      <url-pattern>/*</url-pattern>-->
+<!--    </web-resource-collection>-->
 
-    <user-data-constraint>
-      <transport-guarantee>CONFIDENTIAL</transport-guarantee>
-    </user-data-constraint>
-  </security-constraint>
+<!--    <user-data-constraint>-->
+<!--      <transport-guarantee>CONFIDENTIAL</transport-guarantee>-->
+<!--    </user-data-constraint>-->
+<!--  </security-constraint>-->
 </web-app>
